--- a/simulator/templates/index.html
+++ b/simulator/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>St. Gemini Hospital - Network Operations</title>
+    <title>St. Gemini Hospital - Private SD-WAN Operations</title>
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Oswald:wght@500&display=swap"
         rel="stylesheet">
@@ -25,7 +25,7 @@
             <i class="fa-solid fa-hospital-user"></i>
             <div>
                 <h1>FRONTEND</h1>
-                <small>Hospital SD-WAN</small>
+                <small>Private Hospital SD-WAN</small>
             </div>
         </div>
 
